<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DayFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginVertical="12dp"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/ll">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tarikh"
                        android:padding="@dimen/appbar_padding"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/txt_calories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="@dimen/appbar_padding"
                        android:paddingStart="@dimen/appbar_padding"
                        android:paddingRight="@dimen/appbar_padding"
                        android:paddingLeft="@dimen/appbar_padding"
                        android:text="@string/calorie"
                        android:textSize="24sp" />

                </LinearLayout>


                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/day_bar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@+id/ll"
                    />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goal"
                    android:layout_alignParentRight="true"
                    android:paddingRight="@dimen/appbar_padding"
                    android:layout_margin="12dp"/>

                <ImageView
                    android:id="@+id/fragment_day_imgSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/settings"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="@dimen/appbar_padding"
                    android:layout_margin="12dp"/>

                <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                    android:id="@+id/progress_bar"
                    android:paddingLeft="@dimen/appbar_padding"
                    android:paddingRight="@dimen/appbar_padding"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:layout_below="@+id/fragment_day_imgSettings"
                    android:layout_marginBottom="5dp"
                    />
                <RelativeLayout

                    android:paddingStart="@dimen/appbar_padding"
                    android:paddingLeft="@dimen/appbar_padding"
                    android:paddingRight="@dimen/appbar_padding"
                    android:paddingEnd="@dimen/appbar_padding"
                    android:layout_width="match_parent"
                    android:layout_below="@id/progress_bar"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtProgressPercentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:gravity="left"
                        android:text="0"/>
                    <TextView
                        android:id="@+id/txtMaxCalories"
                        android:layout_width="wrap_content"
                        android:gravity="right"
                        android:layout_alignParentRight="true"
                        android:layout_height="wrap_content"
                        android:text="@string/max_calories">
                    </TextView>
                </RelativeLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingRight="@dimen/appbar_padding"
                    android:paddingEnd="@dimen/appbar_padding"
                    android:paddingStart="@dimen/appbar_padding"
                    android:paddingLeft="@dimen/appbar_padding"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="85"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_gray_text"
                            android:textSize="20sp"
                            android:text="@string/excercies_calories" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:textSize="20sp"
                            android:textColor="@color/text_black"
                            android:layout_height="wrap_content"
                            android:text="0" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_corners_shape2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingLeft="@dimen/appbar_padding"
                    android:paddingStart="@dimen/appbar_padding"
                    android:layout_marginTop="@dimen/appbar_padding"
                    android:layout_marginRight="@dimen/appbar_padding"
                    android:layout_marginEnd="@dimen/appbar_padding"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="85"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/passive_calories"
                            android:textColor="@color/light_gray_text"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/txtPassiveCalor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/text_black"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_corners_shape" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>